syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

import "google/protobuf/wrappers.proto";
import "GrpcDateTime.proto";
import "NullableGrpcDecimal.proto";

message PriceDetail {
    int32 Price = 1;
    string PriceSourceType = 2;
}

message LoanPurposeDetailsObject {
    repeated int32 LoanPurposes = 1;
}

message SpecificDetailHouseAndFlatObject {
    bool PoorCondition = 1;
    bool OwnershipRestricted = 2;
    SpecificDetailFlatOnlyDetails FlatOnlyDetails = 3;
    SpecificDetailFinishedHouseAndFlatDetails FinishedHouseAndFlatDetails = 4;
}

message SpecificDetailFlatOnlyDetails {
    bool SpecialPlacement = 1;
    bool Basement = 2;
}

message SpecificDetailFinishedHouseAndFlatDetails {
    bool Leased = 1;
    bool LeaseApplicable = 2;
}

message SpecificDetailParcelObject {
    repeated SpecificDetailParcelNumber ParcelNumbers = 1;
}

message SpecificDetailParcelNumber {
    google.protobuf.Int32Value Prefix = 1;
    google.protobuf.Int32Value Number = 2;
}

message RealEstateValuationAttachment {
    int32 RealEstateValuationAttachmentId = 1;
    google.protobuf.StringValue Title = 2;
    string FileName = 3;
    int64 ExternalId = 4;
    int32 AcvAttachmentCategoryId = 5;
    cis.types.GrpcDateTime CreatedOn = 6;
}

message OnlinePreorderData {
    google.protobuf.StringValue BuildingTechnicalStateCode = 1;
    google.protobuf.StringValue BuildingMaterialStructureCode = 2;
    google.protobuf.StringValue FlatSchemaCode = 3;
    cis.types.NullableGrpcDecimal FlatArea = 4;
    google.protobuf.StringValue BuildingAgeCode = 5;
}

message LocalSurveyData {
    google.protobuf.StringValue RealEstateValuationLocalSurveyFunctionCode = 1;
    google.protobuf.StringValue FirstName = 2;
    google.protobuf.StringValue LastName = 3;
    google.protobuf.StringValue PhoneNumber = 4;
    google.protobuf.StringValue PhoneIDC = 5;
    google.protobuf.StringValue Email = 6;
}

message RealEstateValuationDocument {
    string DocumentInfoPrice = 1;
    string DocumentRecommendationForClient = 2;
}